After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786164 - Ambient light fixes
Ambient light fixes
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
: 776724 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2017-08-11 16:40 UTC by Bastien Nocera
Modified: 2017-11-28 13:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: Clarify suspend signal monitoring comment (1.24 KB, patch)
2017-08-11 16:40 UTC, Bastien Nocera
committed Details | Review
power: Call backlight_enable() after session setup (1.74 KB, patch)
2017-08-11 16:40 UTC, Bastien Nocera
committed Details | Review
power: "0.0" is not a valid light level (1.22 KB, patch)
2017-08-11 16:40 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2017-08-11 16:40:14 UTC
Makes it work correctly straight after boot.
Comment 1 Bastien Nocera 2017-08-11 16:40:18 UTC
Created attachment 357428 [details] [review]
power: Clarify suspend signal monitoring comment

We need to both watch for the signal and setup inhibitors
to be informed about suspend attempts, so move the comment
above both calls.
Comment 2 Bastien Nocera 2017-08-11 16:40:24 UTC
Created attachment 357429 [details] [review]
power: Call backlight_enable() after session setup

backlight_enable() does 2 things, fiddle with the DPMS as well
as attempt to claim the light sensor. But the light sensor
claim attempt will always fail as the "session_is_active" variable
has not been initialised yet. So just try a tad later for it
to work as soon as you've logged into the session.
Comment 3 Bastien Nocera 2017-08-11 16:40:29 UTC
Created attachment 357430 [details] [review]
power: "0.0" is not a valid light level

This is the equivalent of "undefined" for the accelerometer
orientation. Don't use it to prime our nice ambient light
readings curve.
Comment 4 Rui Matos 2017-08-17 13:20:09 UTC
Review of attachment 357428 [details] [review]:

ok
Comment 5 Rui Matos 2017-08-17 13:20:20 UTC
Review of attachment 357429 [details] [review]:

right
Comment 6 Rui Matos 2017-08-17 13:22:19 UTC
Review of attachment 357430 [details] [review]:

sure
Comment 7 Bastien Nocera 2017-08-21 17:11:02 UTC
Attachment 357428 [details] pushed as f644eb3 - power: Clarify suspend signal monitoring comment
Attachment 357429 [details] pushed as c0e5471 - power: Call backlight_enable() after session setup
Attachment 357430 [details] pushed as 867b203 - power: "0.0" is not a valid light level
Comment 8 Benjamin Berg 2017-11-28 13:49:24 UTC
*** Bug 776724 has been marked as a duplicate of this bug. ***