power: Clarify suspend signal monitoring comment

We need to both watch for the signal and setup inhibitors
to be informed about suspend attempts, so move the comment
above both calls.

https://bugzilla.gnome.org/show_bug.cgi?id=786164